Thu Nov 26 07:22:55 2015  Eric Wong  <e@80x24.org>

	* test/openssl/test_ssl.rb (test_copy_stream): new test

Wed Nov 25 21:23:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): try to_io conversion before read,
	  readpartial, and write methods.  [ruby-dev:49008] [Bug #11199]

Wed Nov 25 10:55:21 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* io.c (argf_getpartial): should not resize str if the second
	  argument is not given.
	  [ruby-core:71668] [Bug #11738]

Tue Nov 24 23:56:25 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: On Solaris, it is safe to define _LARGEFILE_SOURCE
	  when _FILE_OFFSET_BITS=64 is defined (= when 32-bit compile).

Tue Nov 24 10:00:10 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems/installer.rb: Fix two double-word typos.
	  [ci skip][fix GH-1108] Patch by @jwworth

Tue Nov 24 09:17:02 2015  Alexander von Gluck IV  <kallisti5@unixzen.com>

	* beos: Drop support for BeOS now that Haiku is stable.
	  [Fix GH-1112]

Tue Nov 24 09:16:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (rb_gc_for_fd): move to export, as referred by
	  ext/socket.

Tue Nov 24 09:04:29 2015  David Rodriguez  <deivid.rodriguez@gmail.com>

	* file.c: [DOC] add a missing period to File docs, to terminate
	  the sentence and separate from the next sentence.  [Fix GH-1111]

Tue Nov 24 08:30:06 2015  JuanitoFatas  <katehuang0320@gmail.com>

	* NEWS: Fix the issue number of `Struct#dig`, which should be
	  [Feature #11688].  [Fix GH-1110]

Tue Nov 24 07:56:54 2015  Eric Wong  <e@80x24.org>

	* ext/socket/init.c (rsock_s_accept): handle ENOMEM

Tue Nov 24 07:50:15 2015  Eric Wong  <e@80x24.org>

	* dir.c (dir_initialize): use rb_gc_for_fd for ENOMEM
	* ext/socket/init.c (rsock_socket): ditto
	* ext/socket/socket.c (rsock_socketpair): ditto
	* internal.h (rb_gc_for_fd): prototype
	* io.c (rb_gc_for_fd): remove static
	  [ruby-core:71623] [Feature #11727]

Tue Nov 24 06:46:27 2015  Eric Wong  <e@80x24.org>
